// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateDecorations clears decorations with a clean document 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations does not shows left double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations does not shows paragraph separator 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations does not shows right double quotation mark 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations does not shows zero width non-joiner 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [],
  ],
]
`;

exports[`updateDecorations shows multiple characters on multiple lines 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "Bad char \\\\u200B (​)",
        "range": Object {
          "left": Object {
            "character": 18,
            "line": 1,
          },
          "right": Object {
            "character": 19,
            "line": 1,
          },
        },
      },
      Object {
        "hoverMessage": "Bad char \\\\u200B (​)",
        "range": Object {
          "left": Object {
            "character": 19,
            "line": 1,
          },
          "right": Object {
            "character": 20,
            "line": 1,
          },
        },
      },
      Object {
        "hoverMessage": "Bad char \\\\u200B (​)",
        "range": Object {
          "left": Object {
            "character": 20,
            "line": 1,
          },
          "right": Object {
            "character": 21,
            "line": 1,
          },
        },
      },
      Object {
        "hoverMessage": "Bad char \\\\uA0 ( )",
        "range": Object {
          "left": Object {
            "character": 20,
            "line": 4,
          },
          "right": Object {
            "character": 21,
            "line": 4,
          },
        },
      },
      Object {
        "hoverMessage": "Bad char \\\\uA0 ( )",
        "range": Object {
          "left": Object {
            "character": 21,
            "line": 4,
          },
          "right": Object {
            "character": 22,
            "line": 4,
          },
        },
      },
      Object {
        "hoverMessage": "Bad char \\\\uA0 ( )",
        "range": Object {
          "left": Object {
            "character": 22,
            "line": 4,
          },
          "right": Object {
            "character": 23,
            "line": 4,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows non breaking space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "Bad char \\\\uA0 ( )",
        "range": Object {
          "left": Object {
            "character": 19,
            "line": 0,
          },
          "right": Object {
            "character": 20,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows object replacement character 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "Bad char \\\\uFFFC (￼)",
        "range": Object {
          "left": Object {
            "character": 29,
            "line": 0,
          },
          "right": Object {
            "character": 30,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows soft hyphen 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "Bad char \\\\uAD (­)",
        "range": Object {
          "left": Object {
            "character": 12,
            "line": 0,
          },
          "right": Object {
            "character": 13,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;

exports[`updateDecorations shows zero width space 1`] = `
Array [
  Array [
    Object {
      "dispose": [MockFunction],
    },
    Array [
      Object {
        "hoverMessage": "Bad char \\\\u200B (​)",
        "range": Object {
          "left": Object {
            "character": 17,
            "line": 0,
          },
          "right": Object {
            "character": 18,
            "line": 0,
          },
        },
      },
    ],
  ],
]
`;
